<resources>
    <string name="app_name">BestScore</string>
    <string name="title_home">Home</string>
    <string name="title_teammates">Teammates</string>
    <string name="title_events">Events</string>

    <string name="settings_event_name">Name:</string>
    <string name="settings_parcour">Parcour:</string>
    <string name="settings_teammates">Teammates:</string>
    <string name="settings_count_method">Zählweise:</string>
    <string name="settings_zone1">Zone 1:</string>
    <string name="settings_select">SELECT</string>
    <string name="settings_settings">Game Settings:</string>
    <string name="settings_event_name_value">Event #1</string>
    <string name="settings_start">START</string>
    <string name="settings_arrow">Arrow</string>
    <string name="settings_parcour_add">Parcour hinzufügen:</string>
    <string name="settings_parcour_hint">Name</string>
    <string name="settings_teammate_add">Teammate hinzufügen:</string>
    <string name="settings_countmethod_add">Countmethod hinzufügen:</string>
    <string name="settings_countmethod">CountMethod</string>
    <string name="settings_wins_add">Wins:</string>
    <string name="settings_name_add">Name:</string>


    <string name="game_header">Bogenschießen</string>
    <string name="game_item_name">name</string>
    <string name="game_item_arrow">A1</string>
    <string name="game_back">zurück</string>
    <string name="game_continue">vor</string>


</resources>